--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>AraleTech</title>
 </head>
 <body>
     <header>
@@ -80,7 +80,9 @@
             </form>
         </div>
         <div class="contenedor_dos">
-            <button class="enviar_p" type="submit" onclick="alert('Datos enviados')">Enviar Propuesta</button>
+            <button class="enviar_p" type="submit" onclick="alert('Datos enviados, Nos comunicaremos contigo')">
+                Enviar Propuesta
+            </button>
         </div>
     </main>
 </body>
